# autoresearch-rl

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  run.py  train.toml
.pydantic_config/00064821f4d04ea1b3777d55fa9a2d00/: trainer.toml
.pydantic_config/0224d2e9fdff4f17991acd8d1e21fb3c/: orchestrator.toml
.pydantic_config/03033fca65cc40ca8ee4955df34ccefb/: orchestrator.toml
.pydantic_config/0725976bfd304cd6af9c140ad59fe5ad/: trainer.toml
.pydantic_config/08fe7ab180354fefb26adf595ab0456d/: orchestrator.toml  trainer.toml
.pydantic_config/0a7d27b94f5e4a979fa16278bdbd7d83/: trainer.toml
.pydantic_config/0ce155af388b431a8ab78110ad936e1f/: trainer.toml
.pydantic_config/115b5bad23b44d61ae8bad14fd5fc9f0/: orchestrator.toml  trainer.toml
.pydantic_config/1783b7a8967949fd98c7742f2cb758a6/: orchestrator.toml
.pydantic_config/188078450a3d4691aacd72987723e635/: orchestrator.toml
.pydantic_config/1a2c4633ee704a6e8d75497cb536b1fa/: trainer.toml
.pydantic_config/1a9a5e732fba45e699be37ebbf74b70d/: orchestrator.toml
.pydantic_config/1e53257442bd453c949acfb8079c33e2/: trainer.toml
.pydantic_config/208361dfdd544b1596d99dac42666ec0/: orchestrator.toml
.pydantic_config/23070a312392467cadbafdc37897a896/: orchestrator.toml
.pydantic_config/247062af07624d35a459aa98dd32cb0c/: orchestrator.toml
.pydantic_config/24bc353766a442148f006088455260dd/: orchestrator.toml
.pydantic_config/2562c42896e34d8a803d4e3213c223ee/: orchestrator.toml
.pydantic_config/271b1ebebdca431abf9bc4520e2e68c6/: orchestrator.toml
(+100 files in other folders)
