[project]
name = "autoresearch-rl"
version = "0.1.0"
description = "Autonomous RL post-training research"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "prime-rl",
    "verifiers>=0.1.8",
    "math-verify>=0.8.0",
    "tomli>=2.2.0",
    "tomli-w>=1.2.0",
    "pynvml>=13.0.0",
    "huggingface-hub>=1.0.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
flash-attn = [
    "flash-attn",
]

[tool.uv]
preview = true
prerelease = "allow"
no-build-isolation-package = ["flash-attn"]
override-dependencies = [
    "nvidia-cudnn-cu12>=9.15",
    "transformers>=5.1.0.dev0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
prime-rl = { git = "https://github.com/PrimeIntellect-ai/prime-rl.git", rev = "8f2e6bbc" }
verifiers = { git = "https://github.com/PrimeIntellect-ai/verifiers.git", rev = "bc9fcd5" }
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "609e3d5" }
vllm = { url = "https://github.com/vllm-project/vllm/releases/download/v0.16.0/vllm-0.16.0-cp38-abi3-manylinux_2_31_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/test/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
